<resources>
  <string name="app_name">Espresso Tests</string>

  <!-- User details -->
  <string name="user_details_phone">Phone</string>
  <string name="user_details_email">E-mail</string>

  <!-- Content descriptions -->
  <string name="cd_user_details_image">User photograph</string>
  <string name="cd_user_details_phone">Call user</string>
  <string name="cd_user_details_email">Email user</string>
  <string name="cd_user_details_address">Route to user location</string>
  <string name="employees_list">List of users</string>
  <string name="employee_details">User details</string>
  <string name="loading">Loading…</string>
  <string name="login_password">Type your password</string>
  <string name="login_username">Type your username</string>
  <string name="cd_login_image">Android image</string>
  <string name="login_button_text">Login</string>
  <string name="not_empty_field">This field can\'t be empty</string>
  <string name="important">Important</string>
  <string name="validation_message">Fields cannot be empty</string>
  <string name="ok">Ok</string>
  <string name="request_error">There was a error on last request =(</string>
  <string name="user_details_no_info">No info available.</string>
  <string name="no_info_message">This user doesn\'t have %s</string>
  <string name="no_thanks">No, thanks.</string>
  <string name="phone_permission_message">We need your permission to perform this action.</string>
  <string name="permisssion_not_granted">Permission denied.</string>
</resources>
